--- a/Invoice.SDK/Invoice.SDK.csproj
+++ b/Invoice.SDK/Invoice.SDK.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Invoice.SDK</RootNamespace>
     <AssemblyName>Invoice.SDK</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
@@ -34,6 +34,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Costura, Version=4.0.0.0, Culture=neutral, PublicKeyToken=9919ef960d84173d, processorArchitecture=MSIL">
       <HintPath>..\packages\Costura.Fody.4.0.0\lib\net40\Costura.dll</HintPath>
@@ -55,14 +58,19 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rest\CLOSE_PAYMENT.cs" />
     <Compile Include="Rest\Common.cs" />
+    <Compile Include="Rest\CREATE_RECURRENT_PAYMENT.cs" />
     <Compile Include="Rest\CREATE_PAYMENT.cs" />
+    <Compile Include="Rest\CREATE_POINT_OF_SALES.cs" />
     <Compile Include="Rest\CREATE_REFUND.cs" />
     <Compile Include="Rest\CREATE_TERMINAL.cs" />
-    <Compile Include="Rest\GET_PAYMENT.cs" />
+    <Compile Include="Rest\GET_STATUS_BY_ORDER_ID .cs" />
+    <Compile Include="Rest\GET_STATUS_BY_PAYMENT_ID.cs" />
     <Compile Include="Rest\GET_PAYMENT_FROM_ORDER.cs" />
+    <Compile Include="Rest\GET_POINT_OF_SALES.cs" />
     <Compile Include="Rest\GET_REFUND.cs" />
     <Compile Include="Rest\GET_TERMINAL.cs" />
     <Compile Include="Rest\NotificationInfo.cs" />
+    <Compile Include="Rest\PaymentPointInfo .cs" />
     <Compile Include="Rest\PaymentInfo.cs" />
     <Compile Include="Rest\RefundInfo.cs" />
     <Compile Include="Rest\RestClient.cs" />
